--- a/exercitando/background-image.html
+++ b/exercitando/background-image.html
@@ -10,13 +10,18 @@
 </head>
 <body>
     <header>
-        <h1>Background Image by: okpedru1</h1>
+        <h1>Background Image</h1>
     </header>
     <main>
-        <p>Evelin Stone</p>
+        <div class="container">
+            <div class="paragrafo">
+                <h1>title example</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis rerum, sint ipsam suscipit perspiciatis eveniet vero porro iusto culpa quasi esse illo! Vero quisquam asperiores accusamus, earum ullam magni libero. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime modi vitae eveniet incidunt itaque excepturi suscipit voluptatibus temporibus corrupti debitis, qui sint voluptates aperiam nihil! Accusamus obcaecati explicabo rem quos! Lorem ipsum dolor sit amet consectetur adipisicing elit. A est sequi voluptas, doloremque, ex laudantium accusamus nobis aliquid iste aperiam sed fuga ullam, temporibus at facilis deserunt veniam. Dicta, praesentium?</p>
+            </div>
+        </div>
     </main>
     <footer>
-        <h1>Desenvolvido por okpedru1</h1>
+        <h1>Desenvolvido por okpedru1</h1> <a href="https://github.com/okpedru1" target="_blank"><img src="https://cdn.icon-icons.com/icons2/2351/PNG/512/logo_github_icon_143196.png " alt="github-logo" width="30px"> </a>
     </footer>    
 </body>
 </html>
