--- a/ex022/fundo006.html
+++ b/ex022/fundo006.html
@@ -14,7 +14,14 @@
     <main>
         <h1>Teste de imagem de fundo</h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat sit cum voluptatum eaque provident in aliquam ut animi, recusandae quos corporis reiciendis adipisci consequuntur esse atque. Aspernatur, ex. Dolorum, dicta! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur corrupti amet aspernatur, fugiat accusamus laudantium cumque? Soluta cum quia ea eligendi pariatur perferendis excepturi consequatur doloribus, aliquid, nobis ipsam praesentium.
-        Quas, est. Voluptate saepe illo quo libero ut facere. Ea commodi temporibus laborum ullam cumque similique eveniet deserunt, id voluptates consequatur maiores et asperiores, at ipsa. Fugit atque quasi vitae.</p>
+        Quas, est. Voluptate saepe illo quo libero ut facere. Ea commodi temporibus laborum ullam cumque similique eveniet deserunt, id voluptates consequatur maiores et asperiores, at ipsa. Fugit atque quasi vitae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam inventore suscipit natus saepe dolorem accusamus, exercitationem nesciunt vel voluptatem? Accusantium doloremque dicta neque in exercitationem voluptatum. Earum ea voluptatibus quae!
+        Veniam sunt natus non exercitationem tempora facere suscipit laborum, aperiam quaerat quis assumenda velit laudantium nisi inventore optio voluptas labore mollitia delectus facilis! Nulla in minus nam illo, incidunt pariatur!
+        Saepe quod quibusdam sapiente quidem est aperiam aliquam dignissimos ex, doloremque necessitatibus officia optio officiis alias provident maxime quo magni praesentium qui perferendis. Vitae possimus, officiis minima rerum numquam necessitatibus.
+        Ullam, quasi iusto illum qui possimus, eius eum consectetur voluptate, ipsum rerum animi quibusdam earum dolor tempora maxime ad facilis nam impedit assumenda consequatur temporibus sunt nihil! Quae, quo eligendi.
+        Autem incidunt, distinctio, aliquid fuga repudiandae neque doloribus ex dolore corrupti dignissimos soluta iste minus nihil! Nulla odit praesentium cumque obcaecati qui adipisci ipsum molestiae hic, tenetur, et, magni corrupti.
+        Natus corporis temporibus ipsam sequi unde blanditiis ex amet perferendis at, porro officiis exercitationem asperiores in? Provident aliquid ea libero veritatis delectus sint molestias, mollitia rerum nisi sunt porro aperiam!
+        Natus nesciunt ex a enim non omnis repudiandae voluptates odit, totam voluptate nisi aliquid voluptatem cupiditate voluptas ullam? Ipsa laborum hic deleniti incidunt laudantium impedit similique quia rerum animi sint.
+        Iure optio corrupti, illo mollitia recusandae voluptates aspernatur odio temporibus est minus assumenda possimus vero, impedit praesentium! Pariatur quos autem ratione eaque voluptas, iure minima necessitatibus, expedita rem quia minus?</p>
     </main>
     
 </body>
